--- a/Frontend_Backup/exercise.html
+++ b/Frontend_Backup/exercise.html
@@ -5,10 +5,10 @@
         <meta charset="utf-8">
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link href="{{ url_for('static', filename='style/selection.css') }}" rel="stylesheet">
+        <link href="css/selection.css" rel="stylesheet">
 
         <!-- Bootstrap CSS -->
-        <link href="{{ url_for('static', filename='style/bootstrap.min.css') }}" rel="stylesheet">
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
 
     <body>
@@ -19,17 +19,17 @@
         <div class="container-xl">
             <div class="row justify-content-center content-table">
                 <div class="col-xl-4 col-md-6 col-sm-12 p-5">
-                    <a href="vocabulary-sel">
+                    <a href="#">
                         <div class="position-relative border border-2 border-secondary selection-button shadow">
-                            <img src="{{ url_for('static', filename='media/pencil-alt-solid.svg') }}" class="position-absolute start-50 top-40 translate-middle" alt="Pencil">
+                            <img src="media/pencil-alt-solid.svg" class="position-absolute start-50 top-40 translate-middle" alt="Pencil">
                             <h3 class="position-absolute text-dark text-center start-50 top-75 translate-middle-x">Vocabulary</h3>
                         </div>
                     </a>
                 </div>
                 <div class="col-xl-4 col-md-6 col-sm-12 p-5">
-                    <a href="audio-sel">
+                    <a href="#">
                         <div class="position-relative border border-2 border-secondary selection-button shadow">
-                            <img src="{{ url_for('static', filename='media/volume-up-solid.svg') }}" class="position-absolute start-50 top-40 translate-middle" alt="Audio">
+                            <img src="media/volume-up-solid.svg" class="position-absolute start-50 top-40 translate-middle" alt="Audio">
                             <h3 class="position-absolute text-dark text-center start-50 top-75 translate-middle-x">Audio</h3>
                         </div>
                     </a>
@@ -37,7 +37,7 @@
                 <div class="col-xl-4 col-md-6 col-sm-12 p-5">
                     <a href="#">
                         <div class="position-relative border border-2 border-secondary selection-button shadow">
-                            <img src="{{ url_for('static', filename='media/puzzle-piece-solid.svg') }}" class="position-absolute start-50 top-40 translate-middle" alt="Puzzle">
+                            <img src="media/puzzle-piece-solid.svg" class="position-absolute start-50 top-40 translate-middle" alt="Puzzle">
                             <h3 class="position-absolute text-dark text-center start-50 top-75 translate-middle-x">Sentence Construction</h3>
                         </div>
                     </a>
@@ -46,6 +46,6 @@
         </div>
 
         <!-- Option 1: Bootstrap Bundle with Popper -->
-        <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     </body>
 </html>
